# amex-default-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  ensemble.py  logging.yaml  make_pickle.py  pyproject.toml  train.py
notebooks/: Dockerfile_rapid  EDA.ipynb  EDA.ipynb~  EDA_D.ipynb  Feature_prep.txt  feature_importance.csv  feature_importance_checker.ipynb  features.ipynb  make_pickle.ipynb
src/: constant.py  data.py  inference.py  preprocessing.py  trainer.py  utils.py
src/features/: base.py  cluster.py  date.py  encoding.py  groupby.py  tmp.py
src/models/: __init__.py  base.py  catboost.py  lgbm.py
